2001-02-01  Radek Doulik  <rodo@ximian.com>

	* htmlcursor.c (html_cursor_end_of_line): take care of objects
	with different height on one line
	(html_cursor_beginning_of_line): ditto
	(html_cursor_up): ditto
	(html_cursor_down): ditto

2001-02-01  Larry Ewing  <lewing@ximian.com>

	* htmlembedded.c (calc_size): fix the bug I introduced last week
	that caused htmliframes too loop in thier size negotiation.

2001-01-31  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (html_engine_insert_text): delay
	spell check only for newly typed words

2001-01-30  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_set_painter): take care of borber

	* htmliframe.c (draw): take care of html border, fixes iframes
	printing

	* htmlcluev.c (check_point): take care of Objects with zero width

	* htmlclueflow.c (check_point): take care of Objects with zero
	width

	* htmltextslave.c (check_point): take care of ''

	* htmlimage.c (get_actual_width): use actual engine
	(get_actual_height): likewise

	* htmliframe.c (set_max_width): implemented set max width
	(calc_min_width): rewritten, use html_engine_calc_min_width, this
	fixes Evolution welcome message problem

	* htmlengine.c (html_engine_get_view_width): take care of iframes
	(html_engine_get_view_height): likewise
	(html_engine_calc_min_width): new method

2001-01-29  Radek Doulik  <rodo@ximian.com>

	* htmlimage.c (calc_min_width): fix min width for images with
	percented height

2001-01-29  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (html_engine_begin): call html_engine_id_table_clear.
	(html_engine_id_table_clear): move the table reset functions to a
	helper funtion.

2001-01-29  Radek Doulik  <rodo@ximian.com>

	* gtkhtml-search.c (hide): new helper function
	(data_destroy): ditto
	(focus_out_event): new signal handler
	(destroy): ditto
	(gtk_html_isearch): don't destroy input line, hide instead, store
	data in input line widget data

	* gtkhtml-private.h: added search_input_line
